# gdi-mini-node

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  uvicorn-log-config.yaml
.github/workflows/: docker-image.yaml
config/: app.yaml  beacon-aggregated.yaml  beacon-common.yaml  beacon-sensitive.yaml  fdp.yaml
data/: README.md
data/GDI-DS-20251201001/GRCh37/: allele-freq-chr3.4.parquet
data/GDI-DS-20251202001/: metadata.yaml
data/GDIDEMO20251201001D/: metadata.yaml
data/GDIDEMO20251202001D/GRCh37/: individuals.parquet
mini_node/: __init__.py  api.py  oidc.py
mini_node/beacon/: __init__.py  config.py  setup.py
mini_node/beacon/api/: error.py  request.py  router.py
mini_node/beacon/model/: allele_freq.py  common.py  dataset.py  enums.py  variant.py
mini_node/beacon/model/framework/: __init__.py  beacon_info.py  configuration.py  endpoints_map.py  (+4 more)
mini_node/beacon/service/: _parquet.py  allele_freq.py  datasets.py  individuals.py
mini_node/data/: __init__.py  config.py  data.py  fs.py  registry.py  s3.py
mini_node/fdp/: __init__.py  api.py  config.py
mini_node/fdp/service/: __init__.py  _data.py  _loader.py  _template.py  templates.yaml
mini_node/setup/: __init__.py  logger.py  minio.py  model.py
parquet-writer/: __main__.py  _parquet.py  _vcf_af_reader.py  _vcf_base_reader.py  _vcf_individuals_reader.py
scripts/: minio-setup.sh  test-beacon.sh
scripts/k8s/: README.md  deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
scripts/k8s/config/: README.md
(+5 files in other folders)
